新增评论和通知功能